# AgentOS

./: .gitignore  CLAUDE.md  Cargo.toml  INTEGRATION.md  LICENSE  PROTOCOL.md  README.md  agentos-briefing.docx  opencode-prompts.md  shim.md
crates/agent/: Cargo.toml
crates/agent/src/: handler.rs  lib.rs  permissions.rs  prompts.rs  ralph.rs  state.rs  tools.rs  translate.rs
crates/agent/src/middleware/: debug_gate.rs  injection_guard.rs  loop_guard.rs  mod.rs  permission_gate.rs
crates/bitnet/: CLAUDE.md  Cargo.toml  STATUS.md
crates/bitnet/src/: gguf.rs  lib.rs  loader.rs  tensor.rs  tokenizer.rs
crates/bitnet/src/compute/: device.rs  mod.rs
crates/bitnet/src/layers/: attention.rs  bitlinear.rs  mod.rs  model.rs  rmsnorm.rs  swiglu.rs  transformer.rs
crates/bitnet/src/ops/: lut.rs  matmul.rs  mod.rs  quantize.rs
crates/cloud/: Cargo.toml
crates/cloud/src/: lib.rs  provider.rs  register.rs  runtime.rs  tests.rs  types.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/cortex-shim/: Cargo.toml
crates/cortex-shim/scripts/: README.md  test_train_shim.py  train_shim.py
crates/cortex-shim/src/: client.rs  embed.rs  error.rs  lib.rs  manifest.rs
crates/cortex-shim/tests/: embed_round_trip.rs  round_trip.rs
crates/embedding/: Cargo.toml
crates/embedding/src/: lib.rs  tfidf.rs
crates/events/: CLAUDE.md  Cargo.toml  api.md
crates/events/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/kernel/: CLAUDE.md  Cargo.toml  api.md
crates/kernel/src/: context_store.rs  journal.rs  lib.rs  shim_store.rs  thread_table.rs  wal.rs
crates/kv-store/: Cargo.toml
crates/kv-store/src/: lib.rs  store.rs
crates/librarian/: Cargo.toml
crates/librarian/src/: handler.rs  lib.rs  prompt.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  lib.rs  openai.rs  types.rs
crates/organism/: Cargo.toml
crates/organism/src/: lib.rs  parser.rs  profile.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: buffer.rs  events.rs  lib.rs  llm_handler.rs  runtime_impl.rs  test_organism.rs
crates/platform/: Cargo.toml
crates/platform/src/: address.rs  buffers.rs  concurrent.rs  events.rs  lib.rs  registry.rs  router.rs  snapshot.rs  template.rs
crates/ports/: Cargo.toml
crates/ports/src/: firewall.rs  lib.rs
crates/routing/: Cargo.toml
crates/routing/src/: form_filler.rs  lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: handler.rs  idempotency.rs  lib.rs  metrics.rs  sse.rs  state.rs
crates/server/tests/: idempotency.rs  metrics_endpoint.rs  round_trip.rs
crates/tools/: Cargo.toml
crates/tools/src/: command_exec.rs  compile_wasm.rs  cortex_embed.rs  cortex_shim.rs  dispatch.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep.rs  http_request.rs  lib.rs  list_agents.rs  model_download.rs  model_search.rs  model_verify.rs  package_organism.rs  prom_parse.rs  safe_commands.rs  shim_rules.rs  shim_store.rs  shim_train.rs  tickets.rs  user_channel.rs  validate_organism.rs  vdrive_tools.rs
crates/treesitter/: Cargo.toml
crates/treesitter/src/: handler.rs  lib.rs
crates/trigger/: Cargo.toml
crates/trigger/src/: lib.rs  runtime.rs
crates/trigger/src/sources/: cron.rs  event_bus.rs  file_watch.rs  mod.rs  rhai_trigger.rs  timer.rs
crates/tui/: Cargo.toml
crates/tui/examples/: d2_test.rs  login_sequence.d2
crates/tui/src/: lib.rs
crates/tui/src/lsp/: mod.rs  organism.rs
crates/tui/src/tui/: app.rs  commands.rs  context_tree.rs  event.rs  input.rs  onboarding.rs  runner.rs
crates/tui/src/tui/diagram/: mod.rs
crates/tui/src/tui/layout/: activity.rs  graph.rs  shared.rs
crates/vdrive/: Cargo.toml
crates/vdrive/src/: lib.rs  ops.rs
crates/wasm/: CLAUDE.md  Cargo.toml
crates/wasm/src/: capabilities.rs  definitions.rs  kv.rs  lib.rs  peer.rs  python_runtime.rs  runtime.rs  session.rs
crates/wit/: CLAUDE.md  Cargo.toml
crates/wit/src/: lib.rs
examples/: d2_test.rs
organisms/: GUIDE.md  PLATFORM.md  agent-expert.yaml  cloud-expert.yaml  coder-v2.yaml  coder.yaml  default.yaml  infrastructure.yaml  organism-builder.yaml  organism.schema.json  plan-expert.yaml  shim-expert.yaml  wiki-expert.yaml
src/: lib.rs  main.rs  pipeline.rs  runtime_impl.rs  vdrive.rs
src/agent/: handler.rs  mod.rs  permissions.rs  prompts.rs  state.rs  tools.rs  translate.rs
src/agent/middleware/: debug_gate.rs  injection_guard.rs  loop_guard.rs  mod.rs  permission_gate.rs
src/buffer/: mod.rs
src/config/: mod.rs
src/kernel/: context_store.rs  journal.rs  mod.rs  wal.rs
src/librarian/: handler.rs  mod.rs  prompt.rs
src/llm/: client.rs  handler.rs  mod.rs  types.rs
src/lsp/: command_line.rs  mod.rs  organism.rs  python.rs
src/organism/: mod.rs  parser.rs  profile.rs
src/pipeline/: events.rs  mod.rs
src/ports/: firewall.rs
src/routing/: form_filler.rs  local_engine.rs  mod.rs
src/security/: mod.rs
src/tools/: command_exec.rs  compile_wasm.rs  dispatch.rs  file_ops.rs  list_agents.rs  mod.rs  package_organism.rs  safe_commands.rs  shell.rs  test_organism.rs  validate_organism.rs  vdrive_tools.rs
src/treesitter/: handler.rs  languages.rs  symbols.rs
src/tui/: app.rs  box_drawing.rs  commands.rs  folder_tabs.rs  input.rs  input_line.rs  layout.rs  markdown.rs  menu.rs  mod.rs  mouse.rs  onboarding.rs  runner.rs
src/tui/diagram/: grid.rs  layout.rs  mod.rs  parser.rs
src/tui/layout/: activity.rs  graph.rs  messages.rs  mod.rs  shared.rs  threads.rs  tool_editor.rs  wrap.rs  yaml.rs
src/wasm/: capabilities.rs  mod.rs  peer.rs  python_runtime.rs  runtime.rs
src/wit/: mod.rs
tests/: agent_live.rs  llm_live.rs
tools/echo-py/: app.py
tools/echo-py/bindings/wit_world/: __init__.py
tools/python-runtime/: agentos_tool.py  app.py
tools/python-runtime/bindings/wit_world/: __init__.py
tools/samples/: calc_tool.py  echo_decorated.py  echo_tool.py
wit/: kv.wit  python-runtime.wit  tool.wit
