[workspace]
members = [".", "crates/kernel", "crates/events", "crates/vdrive", "crates/bitnet", "crates/embedding", "crates/organism", "crates/wasm", "crates/config", "crates/llm", "crates/routing", "crates/librarian", "crates/agent", "crates/wit", "crates/tools", "crates/cloud", "crates/trigger", "crates/kv-store", "crates/platform", "crates/gui", "crates/security", "crates/ports", "crates/treesitter", "crates/pipeline", "crates/server", "crates/cortex-shim", "crates/tui"]

[package]
name = "agentos"
version = "0.1.0"
edition = "2021"
description = "An operating system for AI coding agents. No compaction, ever."
authors = ["Daniel Ullfig <dullfig@github.com>"]

[dependencies]
rust-pipeline = { path = "../rust-pipeline" }

# Workspace crates
agentos-kernel = { path = "crates/kernel" }
agentos-events = { path = "crates/events" }
agentos-vdrive = { path = "crates/vdrive" }
agentos-embedding = { path = "crates/embedding" }
agentos-organism = { path = "crates/organism" }
agentos-wasm = { path = "crates/wasm" }
agentos-config = { path = "crates/config" }
agentos-llm = { path = "crates/llm" }
agentos-routing = { path = "crates/routing" }
agentos-librarian = { path = "crates/librarian" }
agentos-agent = { path = "crates/agent" }
agentos-wit = { path = "crates/wit" }
agentos-tools = { path = "crates/tools" }
agentos-trigger = { path = "crates/trigger" }
agentos-platform = { path = "crates/platform" }
agentos-security = { path = "crates/security" }
agentos-ports = { path = "crates/ports" }
agentos-treesitter = { path = "crates/treesitter" }
agentos-pipeline = { path = "crates/pipeline" }

# The bundled IDE. Apps that need a developer-facing terminal UI
# depend on the platform via this crate; apps that don't (RingHub,
# headless server deployments) link the platform crates directly.
agentos-tui = { path = "crates/tui" }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"
