[package]
name = "agentos-bitnet"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust 1.58-bit inference engine — ternary matmul, LUT kernels, zero multiplication."

[features]
default = ["gpu"]
gpu = ["wgpu", "pollster"]

[dependencies]
thiserror = "2"
tracing = "0.1"
rayon = "1"
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
