[package]
name = "agentos-cloud"
version = "0.1.0"
edition = "2021"
description = "Cloud GPU provisioning — Rhai-scriptable provider abstraction for inference endpoints."

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Scripting engine — provider adapters written in Rhai
rhai = { version = "1", features = ["sync", "serde"] }

# HTTP for provider API calls (exposed to Rhai scripts)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"

# Config integration
agentos-config = { path = "../config" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
