[package]
name = "agentos-events"
version = "0.2.0"
edition = "2021"
description = "Shared types for AgentOS — events, messages, permissions, tool definitions."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-pipeline = { path = "../../../rust-pipeline" }
async-trait = "0.1"
