[package]
name = "agentos-llm"
version = "0.1.0"
edition = "2021"
description = "LLM client and connection pool for AgentOS — Anthropic API wrapper."

[dependencies]
agentos-events = { path = "../events" }
agentos-config = { path = "../config" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
