[package]
name = "agentos-organism"
version = "0.1.0"
edition = "2021"
description = "Organism configuration — YAML schema, parser, and types for AgentOS."

[dependencies]
agentos-events = { path = "../events" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
