[package]
name = "agentos-routing"
version = "0.1.0"
edition = "2021"
description = "Semantic routing for AgentOS — embedding-based tool dispatch and form filling."

[dependencies]
agentos-events = { path = "../events" }
agentos-embedding = { path = "../embedding" }
agentos-organism = { path = "../organism" }
agentos-llm = { path = "../llm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
code-llm = { path = "../../../code-llm" }
