[package]
name = "agentos-treesitter"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter-backed code indexing and symbol extraction for AgentOS."

[dependencies]
agentos-events = { path = "../events" }
rust-pipeline = { path = "../../../rust-pipeline" }

tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"

async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
agentos-wit = { path = "../wit" }
tokio = { version = "1", features = ["sync", "macros", "rt"] }
