[package]
name = "agentos-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM component runtime for AgentOS — sandboxed tool execution, KV store, Python runtime."

[dependencies]
agentos-events = { path = "../events" }
wasmtime = { version = "41", features = ["component-model"] }
wasmtime-wasi = "41"
rust-pipeline = { path = "../../../rust-pipeline" }
async-trait = "0.1"
tokio = { version = "1", features = ["time", "rt"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
